force-app/main/default/objects/Timesheet__c/Timesheet__c.object-meta.xml
<CustomObject>
    <description>Used to get details of check in, check out, lunch break time of warehouse employees</description>
    <label>Timesheet</label>
    <nameField>
        <displayFormat>TS-{0000000000}</displayFormat>
        <label>Timesheet Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Timesheets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>