force-app/main/default/objects/Timesheet__c/fields/Break_WaveOff__c.field-meta.xml
<CustomField>
    <fullName>Break_WaveOff__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Select , If waiving break.</description>
    <inlineHelpText>Select , If waiving break.</inlineHelpText>
    <label>Break WaveOff</label>
    <type>Checkbox</type>
</CustomField>