force-app/main/default/objects/Timesheet__c/fields/Clock_In_Time__c.field-meta.xml
<CustomField>
    <fullName>Clock_In_Time__c</fullName>
    <description>Check in time of employee</description>
    <inlineHelpText>Check in time of employee</inlineHelpText>
    <label>Clock In Time</label>
    <type>DateTime</type>
</CustomField>