force-app/main/default/objects/Timesheet__c/fields/Clock_Out_Time__c.field-meta.xml
<CustomField>
    <fullName>Clock_Out_Time__c</fullName>
    <description>Check out time of employee</description>
    <inlineHelpText>Check out time of employee</inlineHelpText>
    <label>Clock Out Time</label>
    <type>DateTime</type>
</CustomField>