force-app/main/default/objects/Timesheet__c/fields/Initial_If_waiving_break__c.field-meta.xml
<CustomField>
    <fullName>Initial_If_waiving_break__c</fullName>
    <inlineHelpText>Initial, If waiving break.</inlineHelpText>
    <label>Initial If waiving break</label>
    <length>6</length>
    <type>Text</type>
</CustomField>