force-app/main/default/objects/Timesheet__c/fields/PayPeriod_Declaration_Accepted_Date__c.field-meta.xml
<CustomField>
    <fullName>PayPeriod_Declaration_Accepted_Date__c</fullName>
    <description>Declaration signed/initialed during each pay cycle</description>
    <label>PayPeriod Declaration Accepted Date</label>
    <type>DateTime</type>
</CustomField>