force-app/main/default/objects/Timesheet__c/fields/System_Checkout__c.field-meta.xml
<CustomField>
    <fullName>System_Checkout__c</fullName>
    <defaultValue>false</defaultValue>
    <description>System checkout after the cutoff time in warehouse</description>
    <label>System Checkout ?</label>
    <type>Checkbox</type>
</CustomField>