force-app/main/default/objects/Timesheet__c/fields/Time_In_From_Break__c.field-meta.xml
<CustomField>
    <fullName>Time_In_From_Break__c</fullName>
    <label>Time In (From Break)</label>
    <type>DateTime</type>
</CustomField>