force-app/main/default/objects/Timesheet__c/fields/Time_Out_Break__c.field-meta.xml
<CustomField>
    <fullName>Time_Out_Break__c</fullName>
    <label>Time Out (Break)</label>
    <type>DateTime</type>
</CustomField>