force-app/main/default/objects/Timesheet__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Clock_In_Time__c</columns>
    <columns>Clock_Out_Time__c</columns>
    <columns>Contact__c</columns>
    <columns>Time_In_From_Break__c</columns>
    <columns>Time_Out_Break__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>